src/main/kotlin/antlr-generated/GoParser.java
// Generated from GoParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GENERAL_COMMENT=1, LINE_COMMENT=2, END=3, WHITESPACE=4, BREAK=5, DEFAULT=6, 
		FUNC=7, INTERFACE=8, SELECT=9, CASE=10, DEFER=11, GO=12, MAP=13, STRUCT=14, 
		CHAN=15, ELSE=16, GOTO=17, PACKAGE=18, SWITCH=19, CONST=20, FALLTHROUGH=21, 
		IF=22, RANGE=23, TYPE=24, CONTINUE=25, FOR=26, IMPORT=27, RETURN=28, VAR=29, 
		L_PAREN=30, R_PAREN=31, L_CURLY=32, R_CURLY=33, L_BRACKET=34, R_BRACKET=35, 
		ASSIGN=36, COMMA=37, SEMI=38, COLON=39, DOT=40, PLUS_PLUS=41, MINUS_MINUS=42, 
		DECLARE_ASSIGN=43, ELLIPSIS=44, LOGICAL_OR=45, LOGICAL_AND=46, EQUALS=47, 
		NOT_EQUALS=48, LESS=49, LESS_OR_EQUALS=50, GREATER=51, GREATER_OR_EQUALS=52, 
		PLUS=53, MINUS=54, CARET=55, ASTERISK=56, AMPERSAND=57, OR=58, DIV=59, 
		MOD=60, LSHIFT=61, RSHIFT=62, BIT_CLEAR=63, EXCLAMATION=64, RECEIVE=65, 
		IDENTIFIER=66, INT_LIT=67, FLOAT_LIT=68, IMAGINARY_LIT=69, RUNE_LIT=70, 
		STRING_LIT=71;
	public static final int
		RULE_sourceFile = 0, RULE_packageClause = 1, RULE_packageName = 2, RULE_importDecl = 3, 
		RULE_importSpec = 4, RULE_importPath = 5, RULE_topLevelDecl = 6, RULE_declaration = 7, 
		RULE_functionDecl = 8, RULE_functionName = 9, RULE_functionBody = 10, 
		RULE_methodDecl = 11, RULE_receiver = 12, RULE_constDecl = 13, RULE_constSpec = 14, 
		RULE_typeDecl = 15, RULE_typeSpec = 16, RULE_aliasDecl = 17, RULE_typeDef = 18, 
		RULE_varDecl = 19, RULE_varSpec = 20, RULE_type = 21, RULE_typeName = 22, 
		RULE_typeLit = 23, RULE_qualifiedIdent = 24, RULE_arrayType = 25, RULE_arrayLength = 26, 
		RULE_elementType = 27, RULE_structType = 28, RULE_fieldDecl = 29, RULE_embeddedField = 30, 
		RULE_tag = 31, RULE_pointerType = 32, RULE_baseType = 33, RULE_functionType = 34, 
		RULE_signature = 35, RULE_result = 36, RULE_parameters = 37, RULE_parameterList = 38, 
		RULE_parameterDecl = 39, RULE_interfaceType = 40, RULE_methodSpec = 41, 
		RULE_methodName = 42, RULE_interfaceTypeName = 43, RULE_sliceType = 44, 
		RULE_mapType = 45, RULE_keyType = 46, RULE_channelType = 47, RULE_identifierList = 48, 
		RULE_expressionList = 49, RULE_expression = 50, RULE_unaryExpr = 51, RULE_binary_op = 52, 
		RULE_rel_op = 53, RULE_add_op = 54, RULE_mul_op = 55, RULE_unary_op = 56, 
		RULE_primaryExpr = 57, RULE_conversion = 58, RULE_methodExpr = 59, RULE_receiverType = 60, 
		RULE_selector = 61, RULE_index = 62, RULE_slice = 63, RULE_typeAssertion = 64, 
		RULE_arguments = 65, RULE_operand = 66, RULE_literal = 67, RULE_basicLit = 68, 
		RULE_operandName = 69, RULE_compositeLit = 70, RULE_literalType = 71, 
		RULE_literalValue = 72, RULE_elementList = 73, RULE_keyedElement = 74, 
		RULE_key = 75, RULE_fieldName = 76, RULE_element = 77, RULE_functionLit = 78, 
		RULE_block = 79, RULE_statementList = 80, RULE_statement = 81, RULE_simpleStmt = 82, 
		RULE_labeledStmt = 83, RULE_label = 84, RULE_goStmt = 85, RULE_gotoStmt = 86, 
		RULE_returnStmt = 87, RULE_breakStmt = 88, RULE_continueStmt = 89, RULE_fallthroughStmt = 90, 
		RULE_ifStmt = 91, RULE_switchStmt = 92, RULE_exprSwitchStmt = 93, RULE_exprCaseClause = 94, 
		RULE_exprSwitchCase = 95, RULE_typeSwitchStmt = 96, RULE_typeSwitchGuard = 97, 
		RULE_typeCaseClause = 98, RULE_typeSwitchCase = 99, RULE_typeList = 100, 
		RULE_selectStmt = 101, RULE_commClause = 102, RULE_commCase = 103, RULE_recvStmt = 104, 
		RULE_recvExpr = 105, RULE_forStmt = 106, RULE_condition = 107, RULE_forClause = 108, 
		RULE_initStmt = 109, RULE_postStmt = 110, RULE_rangeClause = 111, RULE_deferStmt = 112, 
		RULE_emptyStmt = 113, RULE_expressionStmt = 114, RULE_sendStmt = 115, 
		RULE_channel = 116, RULE_incDecStmt = 117, RULE_assignment = 118, RULE_assign_op = 119, 
		RULE_shortVarDecl = 120;
	private static String[] makeRuleNames() {
		return new String[] {
			"sourceFile", "packageClause", "packageName", "importDecl", "importSpec", 
			"importPath", "topLevelDecl", "declaration", "functionDecl", "functionName", 
			"functionBody", "methodDecl", "receiver", "constDecl", "constSpec", "typeDecl", 
			"typeSpec", "aliasDecl", "typeDef", "varDecl", "varSpec", "type", "typeName", 
			"typeLit", "qualifiedIdent", "arrayType", "arrayLength", "elementType", 
			"structType", "fieldDecl", "embeddedField", "tag", "pointerType", "baseType", 
			"functionType", "signature", "result", "parameters", "parameterList", 
			"parameterDecl", "interfaceType", "methodSpec", "methodName", "interfaceTypeName", 
			"sliceType", "mapType", "keyType", "channelType", "identifierList", "expressionList", 
			"expression", "unaryExpr", "binary_op", "rel_op", "add_op", "mul_op", 
			"unary_op", "primaryExpr", "conversion", "methodExpr", "receiverType", 
			"selector", "index", "slice", "typeAssertion", "arguments", "operand", 
			"literal", "basicLit", "operandName", "compositeLit", "literalType", 
			"literalValue", "elementList", "keyedElement", "key", "fieldName", "element", 
			"functionLit", "block", "statementList", "statement", "simpleStmt", "labeledStmt", 
			"label", "goStmt", "gotoStmt", "returnStmt", "breakStmt", "continueStmt", 
			"fallthroughStmt", "ifStmt", "switchStmt", "exprSwitchStmt", "exprCaseClause", 
			"exprSwitchCase", "typeSwitchStmt", "typeSwitchGuard", "typeCaseClause", 
			"typeSwitchCase", "typeList", "selectStmt", "commClause", "commCase", 
			"recvStmt", "recvExpr", "forStmt", "condition", "forClause", "initStmt", 
			"postStmt", "rangeClause", "deferStmt", "emptyStmt", "expressionStmt", 
			"sendStmt", "channel", "incDecStmt", "assignment", "assign_op", "shortVarDecl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'break'", "'default'", "'func'", "'interface'", 
			"'select'", "'case'", "'defer'", "'go'", "'map'", "'struct'", "'chan'", 
			"'else'", "'goto'", "'package'", "'switch'", "'const'", "'fallthrough'", 
			"'if'", "'range'", "'type'", "'continue'", "'for'", "'import'", "'return'", 
			"'var'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", "';'", 
			"':'", "'.'", "'++'", "'--'", "':='", "'...'", "'||'", "'&&'", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'^'", "'*'", "'&'", 
			"'|'", "'/'", "'%'", "'<<'", "'>>'", "'&^'", "'!'", "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GENERAL_COMMENT", "LINE_COMMENT", "END", "WHITESPACE", "BREAK", 
			"DEFAULT", "FUNC", "INTERFACE", "SELECT", "CASE", "DEFER", "GO", "MAP", 
			"STRUCT", "CHAN", "ELSE", "GOTO", "PACKAGE", "SWITCH", "CONST", "FALLTHROUGH", 
			"IF", "RANGE", "TYPE", "CONTINUE", "FOR", "IMPORT", "RETURN", "VAR", 
			"L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", 
			"ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS_PLUS", "MINUS_MINUS", 
			"DECLARE_ASSIGN", "ELLIPSIS", "LOGICAL_OR", "LOGICAL_AND", "EQUALS", 
			"NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
			"PLUS", "MINUS", "CARET", "ASTERISK", "AMPERSAND", "OR", "DIV", "MOD", 
			"LSHIFT", "RSHIFT", "BIT_CLEAR", "EXCLAMATION", "RECEIVE", "IDENTIFIER", 
			"INT_LIT", "FLOAT_LIT", "IMAGINARY_LIT", "RUNE_LIT", "STRING_LIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceFileContext extends ParserRuleContext {
		public PackageClauseContext packageClause() {
			return getRuleContext(PackageClauseContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GoParser.EOF, 0); }
		public List<TerminalNode> END() { return getTokens(GoParser.END); }
		public TerminalNode END(int i) {
			return getToken(GoParser.END, i);
		}
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterSourceFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitSourceFile(this);
		}
	}

	public final SourceFileContext sourceFile() throws RecognitionException {
		SourceFileContext _localctx = new SourceFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(242);
			packageClause();
			{
			setState(243);
			match(END);
			}
			setState(249);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(244);
				importDecl();
				{
				setState(245);
				match(END);
				}
				}
				}
				setState(251);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(257);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 554696832L) != 0)) {
				{
				{
				setState(252);
				topLevelDecl();
				{
				setState(253);
				match(END);
				}
				}
				}
				setState(259);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(260);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageClauseContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(GoParser.PACKAGE, 0); }
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public PackageClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterPackageClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitPackageClause(this);
		}
	}

	public final PackageClauseContext packageClause() throws RecognitionException {
		PackageClauseContext _localctx = new PackageClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(262);
			match(PACKAGE);
			setState(263);
			packageName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GoParser.IDENTIFIER, 0); }
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterPackageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitPackageName(this);
		}
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(265);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(GoParser.IMPORT, 0); }
		public List<ImportSpecContext> importSpec() {
			return getRuleContexts(ImportSpecContext.class);
		}
		public ImportSpecContext importSpec(int i) {
			return getRuleContext(ImportSpecContext.class,i);
		}
		public TerminalNode L_PAREN() { return getToken(GoParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(GoParser.R_PAREN, 0); }
		public List<TerminalNode> END() { return getTokens(GoParser.END); }
		public TerminalNode END(int i) {
			return getToken(GoParser.END, i);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitImportDecl(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(267);
			match(IMPORT);
			setState(285);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
			case IDENTIFIER:
			case STRING_LIT:
				{
				setState(268);
				importSpec();
				}
				break;
			case L_PAREN:
				{
				setState(269);
				match(L_PAREN);
				setState(275);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(270);
						importSpec();
						setState(271);
						match(END);
						}
						} 
					}
					setState(277);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(282);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 40)) & ~0x3f) == 0 && ((1L << (_la - 40)) & 2214592513L) != 0)) {
					{
					setState(278);
					importSpec();
					setState(280);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==END) {
						{
						setState(279);
						match(END);
						}
					}

					}
				}

				setState(284);
				match(R_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportSpecContext extends ParserRuleContext {
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public TerminalNode DOT() { return getToken(GoParser.DOT, 0); }
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public ImportSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterImportSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitImportSpec(this);
		}
	}

	public final ImportSpecContext importSpec() throws RecognitionException {
		ImportSpecContext _localctx = new ImportSpecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(289);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
				{
				setState(287);
				match(DOT);
				}
				break;
			case IDENTIFIER:
				{
				setState(288);
				packageName();
				}
				break;
			case STRING_LIT:
				break;
			default:
				break;
			}
			setState(291);
			importPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPathContext extends ParserRuleContext {
		public TerminalNode STRING_LIT() { return getToken(GoParser.STRING_LIT, 0); }
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterImportPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitImportPath(this);
		}
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(293);
			match(STRING_LIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitTopLevelDecl(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_topLevelDecl);
		try {
			setState(298);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(295);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(296);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(297);
				methodDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public ConstDeclContext constDecl() {
			return getRuleContext(ConstDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoParserListener ) ((GoParserListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			setState(303);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(300);
				constDecl();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(301);
				typeDecl();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(302);
				varDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
